--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,9 @@
       "skipFiles": [
         "<node_internals>/**"
       ],
-      "program": "${workspaceFolder}/debug/launcher.js"
+      "program": "${workspaceFolder}/build/debug/launcher.js",
+      "outFiles": ["${workspaceFolder}/build/**/*.js"],
+      "preLaunchTask": "npm: build",
     }
   ]
 }
