--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "destroy": "cdk destroy"
   },
   "devDependencies": {
+    "esbuild": "^0.19.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   },
